--- a/control_panel/templates/control_panel/control_newsletter.html
+++ b/control_panel/templates/control_panel/control_newsletter.html
@@ -1,11 +1,34 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
+{% extends "base.html" %}
+{% load static %}
 
-{% extends "control_base.html"%}
-{% load crispy_forms_tags%}
-{% block content%}
-<h1>Section title</h1>
-<form method ="POST">{% csrf_token %}
-    {{form|crispy}}
-</form>
-<button class="btn btn-default" type="submit">Save</button>
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block content %}
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <hr>
+                <h2 class="logo-font mb-4">Newsletter Management</h2>
+                <h5 class="text-muted">Create a Newsletter</h5>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6">
+                    <form method ="POST">{% csrf_token %}
+                        {{form|crispy}}
+                        <div class="text-right">
+                            <a class="btn btn-outline-black rounded-0" href="#">Cancel</a>
+                            <button class="btn btn-black rounded-0" type="submit">Save Newsletter</button>
+                        </div>
+                    </form>
+                    
 {% endblock%}
