--- a/control_panel/templates/control_panel/control_newsletter_detail.html
+++ b/control_panel/templates/control_panel/control_newsletter_detail.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
-{% extends "control_base.html"%}
+{% extends "base.html" %}
+{% load static %}
 
-{% block content %}
-    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-        <div class="page-heaeder">
-            <h1>{{ newsletter.subject }}</h1>
-        </div>
-        {{ newsletter.body }}
-        <div class="col-sm-8 col-sm-offset-4">_
-            <div class="col-sm-2"><a href="{% url 'control_newsletter_edit' newsletter.id%}"><button>Edit</button></a></div>
-            <div class="col-sm-2"><a href="{% url 'control_newsletter_delete' newsletter.id %}"><button>Delete</button></a></div>
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
         </div>
     </div>
+{% endblock %}
+
+{% block content %}
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <hr>
+                <h2 class="logo-font mb-4">Newsletter Management</h2>
+                <h5 class="text-muted"> Newsletter" {{ newsletter.subject }} "</h5>
+                <hr>
+            </div>
+        </div>
+ 
+
+             <form method ="POST">{% csrf_token %}
+                        {{form|crispy}}
+                    {{ newsletter.body }}    
+                        <div class="text-right">
+                            <a class="btn btn-outline-black rounded-0" href="{% url 'control_newsletter_edit' newsletter.id%}">Edit</a>
+                            <button class="btn btn-danger rounded-0" type="submit" href="{% url 'control_newsletter_delete' newsletter.id %}">Delete</button>
+                        </div>
+                    </form>
+
+    </div>
+
+
 {% endblock %}
