--- a/control_panel/templates/control_panel/control_newsletter_list.html
+++ b/control_panel/templates/control_panel/control_newsletter_list.html
@@ -1,42 +1,55 @@
 <!DOCTYPE html>
-{% extends "control_base.html" %}
+{% extends "base.html" %}
+{% load static %}
+
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+{% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <div class="row">
-        <div class="col-sm-10">
-            <h1 class="page-header">All Newseltters </h1>
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <hr>
+                <h2 class="logo-font mb-4">Newsletters list</h2>
+                <hr>
+            </div>
         </div>
-        <div class= "col-sm-2">
+
+    
+        <div class="table-responsive table-hover">
+            <table class="table">
+                <thead>
+                    <th>Subject</th>
+                    <th>Status</th>
+                    <th>Created</th>
+                    <th>Updated</th>
+                    <th>Edit</th>
+                    <th>Delete</th>
+                </thead>
+                <tbody>
+                    {% for item in items%}
+                        <tr>
+                            <td><a href="{% url 'control_newsletter_detail' item.id%}">{{item.subject}}</a></td>
+                            <td>{{item.status}}</td>
+                            <td>{{item.created}}</td>
+                            <td>{{item.updated}}</td>
+                            <td><a href="{% url 'control_newsletter_edit' item.id %}">Edit</a></td>
+                            <td><a href="{% url 'control_newsletter_delete' item.id %}">Delete</a></td>
+                        </tr>
+
+                    {%endfor%}
+                </tbody>
+            </table>
+        </div>
+                <div class= "col-sm-2">
             <a href="{% url 'control_newsletter' %}"><button type="button" class="btn btn-success">New Newsletter</button></a>
         </div>
-    </div>
-    <div class="table-responsive table-hover">
-        <table class="table">
-            <thead>
-                <th>Subject</th>
-                <th>Status</th>
-                <th>Created</th>
-                <th>Updated</th>
-                <th>Edit</th>
-                <th>Delete</th>
-            </thead>
-            <tbody>
-                {% for item in items%}
-                    <tr>
-                        <td><a href="{% url 'control_newsletter_detail' item.id%}">{{item.subject}}</a></td>
-                        <td>{{item.status}}</td>
-                        <td>{{item.created}}</td>
-                        <td>{{item.updated}}</td>
-                        <td><a href="{% url 'control_newsletter_edit' item.id %}">Edit</a></td>
-                        <td><a href="{% url 'control_newsletter_delete' item.id %}">Delete</a></td>
-                    </tr>
-
-                {%endfor%}
-            </tbody>
-        </table>
-    </div>
     {% include 'pagination.html'%}
 </div>
 {% endblock %}
