--- a/templates/base.html
+++ b/templates/base.html
@@ -146,6 +146,17 @@
     {% block content %}
     {% endblock %}
 
+    {% block footer%}
+    <footer class="text-muted">
+        <div class="container">
+            <p class="float-right">
+            <a href="#">Back to top</a>
+            </p>
+            <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
+            <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="/docs/4.5/getting-started/introduction/">getting started guide</a>.</p>
+            </div>
+            </footer>
+    {% endblock%}
     {% block postloadjs %}
     <script type="text/javascript">
         $('.toast').toast('show');
@@ -153,5 +164,8 @@
     {% endblock %}
 
     
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script>window.jQuery || document.write('<script src="/docs/4.5/assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="/docs/4.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script></body>
+</html>
   </body>
 </html>
