--- a/templates/includes/main_nav.html
+++ b/templates/includes/main_nav.html
@@ -27,5 +27,13 @@
                 <a href="{% url 'products' %}?category=Vegetable" class="dropdown-item">Vegetables</a>
             </div>    
     </li>
+    <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#"id="all-products-link" data-toggle="dropdown" aria-haspop="true" aria-expanded="false">
+            Offers
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
+                <a href="{% url 'products' %}?deal=True" class="dropdown-item">Offers</a>
+            </div>    
+    </li>
     </ul>
 </div>
