--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
+    <div class="container header-container m-46">
         <div class="row">
             <div class="col"></div>
         </div>
