--- a/templates/includes/main_nav.html
+++ b/templates/includes/main_nav.html
@@ -28,7 +28,7 @@
             </div>    
     </li>
     <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#"id="all-products-link" data-toggle="dropdown" aria-haspop="true" aria-expanded="false">
+            <a href="{% url 'products' %}?deal=True" class="logo-font font-weight-bold nav-link text-black mr-5"data-toggle="dropdown" aria-haspop="true" aria-expanded="false">
             Offers
             </a>  
     </li>
